[tool.poetry]
name = "github-actions-docker-build-with-cache"
version = "0.1.0"
description = ""
authors = ["Atsushi Morimoto (74th) <site@74th.tech>"]
license = "CC0"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.2.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
